--- a/npcs/nothuriel_suns_glory.yaml
+++ b/npcs/nothuriel_suns_glory.yaml
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Fallen
+    sub-race: Protector
 
     #
     # Pronouns (case insensitive):
@@ -560,12 +560,11 @@ npc:
     - content: You have a +2 bonus to Attack and Damage Rolls made with this weapon.
     - title: +2 Dagger
     - content: You have a +2 bonus to Attack and Damage Rolls made with this weapon.
-    - title: Golden Plate Male
-    - content: While wearing it, you have an extra +1 bonus to your AC, and your speed increases by 10 feet.
-    - content: This armor has 5 charges. It regains 1d4 + 1 charges daily at dawn.
-    - content: When you roll a Dexterity saving throw or you roll for initiative, you can expend 1 charge to gain advantage on that roll before you make it.
-    - content: When you are hit by an attack, you can use your reaction to expend 2 charges and halve the damage you take from that attack, unless the damage is necrotic.
-    - content: If you fail a saving throw, you can expend 4 charges to succeed instead.
+    - title: Astral Silver Plate
+    - content: This armor is almost flawlessly shiny, having an almost enchanting glow in dim light. The reflection of spirits can be seen passing by the armor. While wearing this armor, you have a +2 bonus to your AC.
+    - content: Astral Protection. You have advantage on saving throws on spells that targets you and no other creature, and all spell attacks made against you are made at disadvantage.
+    - content: Astral Reflection of Brilliance. When you are the target of a spell that targets you and no other creature, as a reaction to this spell being cast, you may reflect the spell back at the caster, with the spell 
+               being centered on the caster. The spell has the same spell attack or spell save DC as the caster's spell attack or spell save DC. Once this property has been used, it can't be used again until the next dawn.
 
   profile:
 
