Updates and New Characters

--- a/Rulesets/feats.yaml
+++ b/Rulesets/feats.yaml
@@ -42,7 +42,7 @@
    - title: Drow High Magic
    - content: Prerequisite - Elf (drow).	You can cast the detect magic spell (at will) and the levitate and dispel magic spells (1/long rest).
    - title: Dual Wielder
-   - content: +1 to CA if you're wielding a melee weapon in each hand, two-weapon fighting with non-light weapon, draw two weapons.
+   - content: +1 to AC if you're wielding a melee weapon in each hand, two-weapon fighting with non-light weapon, draw two weapons.
    - title: Dungeon Delver
    - content: Advantage to Perception and Investigation checks, to saving throws vs traps, and search for traps at normal pace.
    - title: Durable
