--- a/Rulesets/bard subclasses.yaml
+++ b/Rulesets/bard subclasses.yaml
@@ -215,14 +215,11 @@
     - content: You gain proficiency with medium armor and the scimitar. If you’re proficient with a simple or martial melee weapon, you can use it as a spellcasting focus for your bard spells.
     - title: Fighting Style
     - content: You adopt a particular style of fighting as your specialty. Choose one of the following options. You can't take a Fighting Style option more than once, even if you later get to choose again.
-    - content: Dueling - When you are wielding a melee weapon in one hand and no other weapons, you gain a +2 bonus to damage rolls with that weapon.
-    - content: Two-Weapon Fighting - When you engage in two-weapon fighting, you can add your ability modifier to the damage of the second attack.
     - title: Blade Flourish
     - content: You learn to conduct impressive displays of martial prowess and speed. Whenever you take the Attack action on your turn, your walking speed increases by 10 feet until the end of the turn, and if a weapon
                attack that you make as part of this action hits a creature, you can use one of the following Blade Flourish options of your choice. You can use only one Blade Flourish option per turn.
-    - title: Defensive Flourish
-    - content: You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit. The damage equals the number you roll on the Bardic Inspiration die. You also add the
-               number rolled to your AC until the start of your next turn.
+    - content: Defensive Flourish - You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit. The damage equals the number you roll on the Bardic Inspiration die. You also 
+                                    add the number rolled to your AC until the start of your next turn.
     - content: Slashing Flourish - You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit and to any other creature of your choice that you can see within 
                                    5 feet of you. The damage equals the number you roll on the Bardic Inspiration die.
     - content: Mobile Flourish - You can expend one use of your Bardic Inspiration to cause the weapon to deal extra damage to the target you hit. The damage equals the number you roll on the Bardic Inspiration 
@@ -1166,3 +1163,95 @@
                and your Soul dice last until they' re depleted or you finish a long rest. In addition, when you finish a short rest, you can roll one of your Soul dice, choosing expended spell slots to recover. 
                The spell slots can have a combined level of half the number rolled (minimum of one) and none of the slots can be 6th level or higher. Once you use this feature, you can't use it again until you
                finish a long rest.
+               
+               
+  - title: College of Dirge Singers Abilities
+  - abilities: 
+    - title: Broad Inspiration
+    - content: When you join the College of Dirge Singers at 3rd level, you learn to strengthen the hearts of your troops and stir them to greatness. You learn the Guidance cantrip, which is considered a bard spell for you, but
+               doesn’t count against your number of cantrips known.
+    - content: Additionally, as a bonus action, you can expend one use of your Bardic Inspiration to inspire multiple allies. When you do so, choose two creatures within 60 feet of you that can hear you. Each creature gains one
+               Bardic Inspiration die.
+    - content: Your Bardic Inspiration die does not change at 5th level, but remains a d6; it becomes a d8 at 10th level, and a d10 at 15th level.
+    - title: Keeper of History
+    - content: Also at 3rd level, you gain proficiency in either History or Performance. If you are already proficient in both of these skills, you gain proficiency in one of the following skills of your choice - Arcana, 
+               Intimidation, or Persuasion.
+    - content: In addition, choose either History or Performance. Your proficiency bonus is doubled for any ability check you make that uses that skill.
+    - title: Commanding Voice
+    - content: Starting at 6th level, you excel at inspiring and directing soldiers in battle. When a creature that has a Bardic Inspiration die from you takes the Attack action on its turn, you can use your reaction to allow 
+               it an additional weapon attack. The creature rolls the Bardic Inspiration die, adding the number rolled to its weapon damage roll.
+    - title: Master Commander
+    - content: Starting at 14th level, you unflaggingly maintain the spirits and discipline of your unit. During your turn, you can use Countercharm as a bonus action. When you start a Countercharm performance, if any creature 
+               that gains its benefit is currently charmed or frightened, it can immediately make another saving throw against the effect that imposed the condition.
+    - content: In addition, when a creature that gains the benefit of your Countercharm performance makes an ability check or saving throw, it can roll a d4 and add the number rolled to the ability check or saving throw.
+    
+    
+  - title: College of the Maestro Abilities
+  - abilities: 
+    - title: Battle Muse
+    - content: When you join the College of the Maestro at 3rd level, you gain one additional use of your Bardic Inspiration feature.
+    - content: This feature grants you another additional use of Bardic Inspiration at 6th level, and again at 14th level.
+    - title: Symphony of Conflict
+    - content: You've been trained in the bardic art of magically manipulating the sounds of combat into a concert of powerful melodies that can alter the very battlefield around you.
+    - content: When you select this bardic school at 3rd level, you learn 2 conducting techniques of your choice, which are detailed under "Conducting Techniques" below. All techniques require at least one free hand, baton, or 
+               wand to utilize. For these techniques to function, you must be able to see your target, and they must be able to hear you.
+    - content: You learn 1 additional conducting technique of your choice at 6th and 14th level. Each time you learn a new technique, you can also replace one technique you know with a different one.
+    - title: Frenetic Crescendo
+    - content: At 6th level, you can harness the beat of battle, whipping it into a frenzy of drums, chants, and glory. You can use your action to expend any number of uses of your Bardic Inspiration feature. For each expended 
+               use, you can immediately grant a Bardic Inspiration die to a creature other than yourself within 60 feet that you can see. A creature can have only one Bardic Inspiration die at a time.
+    - content: Once you use this feature, you must finish a long rest before you can use it again.
+    - title: Virtuoso of Captivation
+    - content: Upon reaching 14th level, you can begin conducting a mystical symphony as an action, distracting and capturing the minds of nearby creatures. For up to 10 minutes, any number of creatures you choose within 60 
+               feet who can hear you have disadvantage on any saving throws against being charmed and against magical sleep.
+    - content: In addition, affected targets have disadvantage on Wisdom (Perception) rolls that rely on sight or sound to detect targets other than you.
+    - content: In combat, you must spend your action each turn to continue the performance or the effect ends. Once you use Virtuoso of Captivation, you must finish a short or long rest before you can use it again.
+    - title: Conducting Techniques
+    - content: Aria of Suspense (Ansia) - You build an air of tension and paranoia with subtle, droning tones. As an action, you expend and roll a Bardic Inspiration die. For the next 10 minutes, any creatures of your choice 
+                                          within 60 feet cannot be surprised, and gain a bonus on saving throws against traps and environmental hazards equal to your Bardic Inspiration die roll.
+    - content: Crash (Marcato) - You learn how to harness and amplify the roar of a well-placed blow into a violent explosion of sound. When a creature other than yourself within 60 feet of you hits with an attack, you can use 
+                                 your reaction to expend and roll a Bardic Inspiration die. The target of the triggering attack must make a Strength saving throw against your Spell save DC or take thunder damage equal to half 
+                                 of the number you rolled and be knocked prone.
+    - content: Dirge of Dread (Finale) - You play a terrifying dirge to accompany a deathblow, striking fear into the hearts of your nearby enemies. When an ally brings a creature within 60 feet to 0 hitpoints, you can use your
+                                         reaction to expend and roll a Bardic Inspiration die. Select a number of creatures within 15 feet of the triggering ally equal to half of the number rolled (minimum 1). Each target must 
+                                         make a Wisdom saving throw against your Spell save DC or become frightened of the triggering ally until the end of that ally's next turn. After the effect ends, or the save is successful,
+                                         targeted creatures are immune to Dirge of Dread for the next 24 hours.
+    - content: Dissonance (Discordia) - Summoning a harsh, discordant tone, you muddle the mind of an opponent, lessening their defenses. When a creature within 60 feet is forced to make a saving throw, you can use your 
+                                        reaction to expend and roll a Bardic Inspiration die. You reduce their saving throw by half of the number rolled. You can use this feature after the creature makes its saving throw roll, 
+                                        but before the DM determines a success or failure.
+    - content: Guiding Tone (Fermata) - You drag a sharp, powerful chord through the mind of a creature, forcing it to suddenly stumble in a direction you wish. As a bonus action, you expend and roll a Bardic Inspiration die 
+                                        and select a creature other than yourself within 60 feet. The target must succeed on a Wisdom saving throw against your Spell save DC or take psychic damage equal to half of the number 
+                                        rolled and be pushed 10 feet in a direction you choose. A target can fail the saving throw voluntarily.
+    - content: Hasten Tempo (Accelerando) - Your manipulation of tempo and song can inspire others to act more quickly. You can use your Bonus action on your turn to choose one creature other than yourself within 60 feet. 
+                                            Expend and roll a Bardic Inspiration die, adding the number rolled to the creature's initiative and moving them up to the initiative order accordingly. If this would move them higher 
+                                            than you, they immediately take their turn after you finish this round. A creature cannot be affected by Hasten Tempo again until they've finished a short or long rest.
+    - content: Hymm of Harmony (Armonia) - The melodies surrounding your allies promote rapid recovery. When a creature that has a Bardic Inspiration die from you regains any hitpoints, they can expend and roll their 
+                                           inspiration die to regain additional hitpoints equal to the number rolled.
+    - content: Majestic Anthem (Maestoso) - Pulled from the chaos, you muster an uplifting melody that bolsters the resolve of your allies. You can expend and roll a Bardic Inspiration die as an action, and all other creatures 
+                                            you choose within 60 ft gain temporary hitpoints equal to the number rolled plus your Charisma modifier (minimum of 1). These temporary hitpoints last until the end of your next turn.
+    - content: Resonance (Risonanza) - You shape the harmonic vibrations of a weapon's movements into a dangerous, sonic enhancement. Using a bonus action, you can expend and roll a Bardic Inspiration die, choosing one weapon 
+                                       within 60 feet of you. Until the end of your next turn, all attacks with that weapon deal additional thunder damage equal to half of the number rolled (minimum of 1).
+    - content: Sprint (Presto) - The song you conjure can stir the winds, pushing along those who require expedient travel. A creature that has a Bardic Inspiration die from you can expend and roll their inspiration to increase
+                                 their speed for that turn. A roll of 1-4 increases their speed of 10 feet, a roll of 5-8 increases their speed by 15 feet, and a roll of 9-12 increases their speed by 20 feet.
+                                 
+                                 
+  - title: College of Satire Abilities
+  - abilities: 
+    - title: Bonus Proficiencies
+    - content: When you join the College of Satire at 3rd level, you gain proficiency with thieves’ tools. You also gain proficiency in Sleight of Hand and one additional skill of your choice. If you are already proficient with
+               thieves’ tools or in Sleight of Hand, choose another skill proficiency for each proficiency you already have.
+    - title: Tumbling Fool
+    - content: At 3rd level, you master a variety of acrobatic techniques that allow you to evade danger. As a bonus action, you can tumble. When you tumble, you gain the following benefits for the rest of your turn
+    - content: You gain the benefits of taking the Dash and Disengage actions.
+    - content: You gain a climbing speed equal to your current speed.
+    - content: You take half damage from falling.
+    - title: Fool's Insight
+    - content: At 6th level, your ability to gather stories and lore gains a supernatural edge. You can cast Detect Thoughts up to a number of times equal to your Charisma modifier. You regain any expended uses of this ability 
+               after completing a long rest.
+    - content: If a creature resists your attempt to probe deeper and succeeds at its saving throw against your Detect Thoughts, it immediately suffers an embarrassing social gaffe. It might loudly pass gas, unleash a 
+               thunderous burp, trip and fall, or be compelled to tell a tasteless joke.
+    - title: Fool's Luck
+    - content: Jesters seem to have a knack for pulling themselves out of tight situations, transforming what looks like sure failure into an embarrassing but effective success.
+    - content: At 14th level, you can expend one use of Bardic Inspiration after you fail an ability check, fail a saving throw, or miss with an attack roll. Roll a Bardic Inspiration die and add the number rolled to your 
+               attack, saving throw, or ability check, using the new result in place of the failed one.
+    - content: If using this ability grants you a success on the attack, saving throw, or ability check, note the number you rolled on the Bardic Inspiration die. The DM can then apply that result as a penalty to an attack or 
+               check you make, and you cannot use this ability again until you suffer this drawback. When the DM invokes this penalty, describe an embarrassing gaffe or mistake you make as part of the affected die roll.
