--- a/npcs/romkey_dread_knight.yaml
+++ b/npcs/romkey_dread_knight.yaml
@@ -489,8 +489,7 @@ npc:
   - title: Fighter Abilities
   - abilities:
     - title: Fighting Style
-    - content: Nightmare Duelist - When you engage in two-weapon fighting, you can add your ability modifier to the damage of the second attack. When you make a disengage action, you can attack with a single weapon as a bonus 
-                                   action.
+    - content: Two-Weapon Fighting. When you engage in two-weapon fighting, you can add your ability modifier to the damage of the second attack.
     - title: Second Wind
     - content: Bonus Action to regain 1d10 + 20
     - title: Action Surge
@@ -528,7 +527,8 @@ npc:
     - content: Your knowledge of Death gives you heightened awareness of other creatures of Death. You have advantage on Wisdom (Survival) checks to track Undead and Fiends, as well as on Intelligence checks to recall 
                information about them.
     - title: Fighting Style
-    - content:
+    - content: Nightmare Duelist - When you engage in two-weapon fighting, you can add your ability modifier to the damage of the second attack. When you make a disengage action, you can attack with a single weapon as a bonus 
+                                   action.
     - title: Rune Weapon
     - content: At 2nd level, you can draw on the dread magic of the grave to inscribe your weapon with deathly Runes. These Runes may be used for additional effects described in this class description. You must spend one hour 
                inscribing your weapon, which may be completed during a short rest. You may inscribe up to two weapons, and you cannot be disarmed of your Rune Weapons while you are conscious. If you inscribe a third weapon, you 
