--- a/npcs/romkey_dread_knight.yaml
+++ b/npcs/romkey_dread_knight.yaml
@@ -602,7 +602,7 @@ npc:
              Blindsight up to 120 feet. Any creature that dies within 60 feet of you has their soul automatically absorbed into your phylactery. All hostile creatures within 10 feet of the Lich take 2d8 necrotic damage per round.
              This damage is increased to 3d8 if the creature is below half health and is a living creature.
   - title: Undead Domination
-  - content:you can make any Undead that you can see within 60 feet of you roll a Wisdom saving throw against your Spell Save DC or fall under your complete control permanently. You can use this feature a number of times equal 
+  - content: You can make any Undead that you can see within 60 feet of you roll a Wisdom saving throw against your Spell Save DC or fall under your complete control permanently. You can use this feature a number of times equal 
             to your Intelligence modifier. These features replenish after a long rest. 
   - title: Phylactery 
   - content: You craft a phylactery. Thanks to the phylactery, you can no longer die. If you die, you return to life in 1d10 days, regaining all your hit points. Your body appears within 5 feet of the phylactery, if both are in 
