--- a/npcs/romkey_dread_knight.yaml
+++ b/npcs/romkey_dread_knight.yaml
@@ -562,8 +562,9 @@ npc:
     - title: Grim Oath
     - content: At 3rd level you mimic the Oath you took in your former life. Though you can choose to follow the same Tenets, you are not bound by your Paladin Oath any longer, and may do as you please. Choose a 
                Grim Oath that you follow exclusively. You may choose the Oath of the Undying, Oath of the North, or Oath of the Plague, all detailed at the end of this class description. Your choice grants you features at 3rd 
-               level and again at 7th, 15th, and 20th lel.
-    - content: Oath of Undying - Undying Presence - At 3rd level when you take this Oath, your blood churns with radiant fire. You gain resistance to Radiant damage. Additionally, the target of your Rejuvenating Strike has 
+               level and again at 7th, 15th, and 20th level.
+    - content: Oath of Undying
+    - content:                   Undying Presence - At 3rd level when you take this Oath, your blood churns with radiant fire. You gain resistance to Radiant damage. Additionally, the target of your Rejuvenating Strike has 
                                                     disadvantage on attacks against targets other than you until the end of its next turn.
     - content:                   Aura of the Undying - At 7th level, allies within 10 feet of you gain resistance to Radiant damage. Additionally, the power of your radiant blood can help prevent death. You and allies within 10 
                                                        feet of you gain advantage on Death Saving Throws. The power of your will is so strong, the saving throw effect persists even if you are unconscious or incapacitated. At 
