--- a/npcs/nanny.yaml
+++ b/npcs/nanny.yaml
@@ -671,7 +671,7 @@ npc:
     - content: Spell Absorption - While holding the staff, you have advantage on saving throws against spells. In addition, you can use your reaction when another creature casts a spell that targets only you. If you do, the 
                                   staff absorbs the magic of the spell, canceling its effect and gaining a number of charges equal to the absorbed spell’s level. However, if doing so brings the staff’s total number of charges 
                                   above 50, the staff explodes as if you activated its retributive strike (see below).
-    - content: Spells - While holding the staff, you can use an action to expend some of its charges to cast one of the following spells from it, using your spell save DC and spellcasting ability: conjure elemental (7 charges), 
+    - content: Spells - While holding the staff, you can use an action to expend some of its charges to cast one of the following spells from it, using your spell save DC and spellcasting ability - conjure elemental (7 charges), 
                         dispel magic (3 charges), fireball (7th-level version, 7 charges), flaming sphere (2 charges), ice storm (4 charges), invisibility (2 charges), knock (2 charges), lightning bolt (7th-level version, 
                         7 charges), passwall (5 charges), plane shift (7 charges), telekinesis (5 charges), wall of fire (4 charges), or web (2 charges).
     - content: You can also use an action to cast one of the following spells from the staff without using any charges - arcane lock, detect magic, enlarge/reduce, light, mage hand, or protection from evil and good.
