--- a/npcs/gerhardt_klippstein.yaml
+++ b/npcs/gerhardt_klippstein.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Gerhardt_Klippstein
+  id: gerhardt_klippstein
 
   #
   # The name of the submitter (your name).
@@ -333,7 +333,7 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: Collegium_Imaginata
+    - id: collegium_imaginata
       name: Collegium Imaginata
       role: Director and Lead Designer
 
